objects/Case.object
<CustomObject>
    <fields>
        <fullName>Zendesk_Support_Ticket_Assignee_Name__c</fullName>
        <description>Name of the Zendesk Support Ticket&apos;s Assignee, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Name of the Zendesk Support Ticket&apos;s Assignee</inlineHelpText>
        <label>Zendesk Support Ticket Assignee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_level_plan_of_attack_for_Account__c</fullName>
        <inlineHelpText>What is our high-level plan of attack for the account?</inlineHelpText>
        <label>High-level plan of attack for Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Requester_Name__c</fullName>
        <description>Name of the Zendesk Support Ticket&apos;s requester, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Name of the Zendesk Support Ticket&apos;s requester</inlineHelpText>
        <label>Zendesk Support Ticket Requester Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Resolution_Bus__c</fullName>
        <description>Full resolution time of the Zendesk Support Ticket in minutes (Business day), this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Full resolution time of the Zendesk Support Ticket in minutes (Business day)</inlineHelpText>
        <label>Zendesk Support Ticket Resolution (Bus)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Resolution_Cal__c</fullName>
        <description>Full resolution time of the Zendesk Support Ticket in minutes (Calendar day), this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Full resolution time of the Zendesk Support Ticket in minutes (Calendar day)</inlineHelpText>
        <label>Zendesk Support Ticket Resolution (Cal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_date_s_are_you_hoping_for_CS_sppt__c</fullName>
        <label>What date(s) are you hoping for CS sppt?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Requester_Email__c</fullName>
        <description>Email address of the Zendesk Support Ticket&apos;s Requester, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Email address of the Zendesk Support Ticket&apos;s Requester</inlineHelpText>
        <label>Zendesk Support Ticket Requester Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Initial_Assigned__c</fullName>
        <description>Time when the Zendesk Support Ticket First Assigned At, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Time when the Zendesk Support Ticket First Assigned At</inlineHelpText>
        <label>Zendesk Support Ticket Initial Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>What_are_the_customers_intended_outcomes__c</fullName>
        <label>What are the customers intended outcomes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Organization_Name__c</fullName>
        <description>Name of the Zendesk Support Ticket&apos;s Organization, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Name of the Zendesk Support Ticket&apos;s Organization</inlineHelpText>
        <label>Zendesk Support Ticket Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Requester_As_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zendesk Support Ticket&apos;s Case synced to Salesforce as Lead, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Zendesk Support Ticket&apos;s Case synced to Salesforce as Lead</inlineHelpText>
        <label>Zendesk Support Ticket Requester As Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Zendesk Support Ticket As Case</relationshipLabel>
        <relationshipName>Zendesk_Support_Tiicket_As_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Sub_Type__c</field>
            <operation>equals</operation>
            <value>Sales Credit Request</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Confirmed_Reviewed__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Case_Requester__c</columns>
        <columns>Effort_Minutes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>SOPS_My_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Implementation_Type__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Requested_Resolution_Date__c</columns>
        <columns>Request_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Effort_Minutes__c</columns>
        <columns>Team__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Confirmed_Reviewed__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesOps</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Implementation_Type__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <label>!SOPS: My Open Cases - Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SOPS_All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Requested_Resolution_Date__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Effort_Minutes__c</columns>
        <columns>Team__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Confirmed_Reviewed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesOps</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>!SOPS: All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>SOPS_Open_Task_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Requested_Resolution_Date__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Effort_Minutes__c</columns>
        <columns>Team__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesOps</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Implementation_Type__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <label>!SOPS: Open Task Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Open_CS_Engagements</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Opp_Stage__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.REASON</columns>
        <columns>OWNER_NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opp_Amount__c</columns>
        <columns>Case_Requester__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Success</value>
        </filters>
        <label>CS: Open CS Engagements</label>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Security_Review2</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>Security Review</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Cases: Security Review - New/open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SOPS_Closed_Last_7_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Requested_Resolution_Date__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Effort_Minutes__c</columns>
        <columns>Team__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesOps</value>
        </filters>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>!SOPS: Closed Last 7 Days</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SOPS_Open_Project_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Requested_Resolution_Date__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Effort_Minutes__c</columns>
        <columns>Team__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesOps</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Implementation_Type__c</field>
            <operation>equals</operation>
            <value>Project</value>
        </filters>
        <label>!SOPS: Open Project Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Closed_CS_Engagements</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.REASON</columns>
        <columns>OWNER_NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opp_Amount__c</columns>
        <columns>Opp_Stage__c</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Resource Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>CS: Closed CS Engagements</label>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_MY_Open_CS_Engagements</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Opp_Stage__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.REASON</columns>
        <columns>OWNER_NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opp_Amount__c</columns>
        <columns>Case_Requester__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Success</value>
        </filters>
        <label>CS: MY Open CS Engagements</label>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Security_Review_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.REASON</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>Security Review</value>
        </filters>
        <label>Cases: Security Review - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SOPs_My_Created_Cases_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Requested_Resolution_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesOps</value>
        </filters>
        <filters>
            <field>Requester_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SOPs: My Created Cases - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Zendesk_Ticket_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Zendesk Ticket Queue</label>
        <queue>Zendesk_Ticket_Queue</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SOPS_My_Open_Working_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>Case_Requester__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Requested_Resolution_Date__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Effort_Minutes__c</columns>
        <columns>Team__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Confirmed_Reviewed__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesOps</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Working,Waiting,Escalated</value>
        </filters>
        <label>!SOPS: My Open Cases - Working</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Success</fullName>
        <active>true</active>
        <businessProcess>Success</businessProcess>
        <label>Success</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support</fullName>
        <active>true</active>
        <businessProcess>Support</businessProcess>
        <label>Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zendesk</fullName>
        <active>true</active>
        <businessProcess>Sales Ops</businessProcess>
        <description>Zendesk Ticket</description>
        <label>Zendesk</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesOps</fullName>
        <active>true</active>
        <businessProcess>Sales Ops</businessProcess>
        <label>SalesOps</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Engineer</fullName>
        <active>true</active>
        <businessProcess>Success</businessProcess>
        <label>Sales Engineer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Responses</fullName>
        <active>true</active>
        <businessProcess>Success</businessProcess>
        <description>SatisMeter Responses</description>
        <label>Survey Responses</label>
    </recordTypes>
    <validationRules>
        <fullName>SOPSC003_Requirements_Sales_Credit_Req</fullName>
        <active>true</active>
        <description>Validation to capture necessary information for Sales Credit Requests</description>
        <errorConditionFormula>AND(
ISPICKVAL( Sub_Type__c , &quot;Sales Credit Request&quot;),
ISBLANK( Additional_Information__c ))</errorConditionFormula>
        <errorDisplayField>Additional_Information__c</errorDisplayField>
        <errorMessage>Please provide a few things about this Sales Credit Request: 
1. Link(s) to your &quot;Proof of Activity&quot;
2. Link to the Duplicate Opportunity
3. Manager approval for this Sales Credit Request
[SOPSC003]</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SOPSC004_Requirements2_Sales_Credit_Req</fullName>
        <active>true</active>
        <description>Validation to capture necessary information for Sales Credit Requests</description>
        <errorConditionFormula>AND(
ISPICKVAL( Sub_Type__c , &quot;Sales Credit Request&quot;),
ISBLANK( Opportunity__c ))</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Please provide the Opportunity you&apos;re requesting credit for. [SOPSC004]</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SOPSC005_Restrict_Licensing_Permissions</fullName>
        <active>true</active>
        <description>Blocks the selection of Licensing &amp; Permissions and directs users to use Slack instead
$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</description>
        <errorConditionFormula>AND(
ISPICKVAL( Sub_Type__c ,&quot;Licensing and Permissions**&quot;),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>Sub_Type__c</errorDisplayField>
        <errorMessage>Please use the #org_access Slack channel with command /request to make this type of request. [SOPSC005]</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SOPSC002_Requirements_Project_Space_Help</fullName>
        <active>false</active>
        <description>Validation to capture necessary information for Project/Space Help Requests</description>
        <errorConditionFormula>AND(
ISPICKVAL( Sub_Type__c , &quot;Project/Space Help&quot;),
OR(
ISBLANK( AccountId  ),
ISBLANK( Project__c )
))</errorConditionFormula>
        <errorMessage>Please make sure both the Account and Project are populated so SOPs knows which Project/Account to fix. [SOPSC002]</errorMessage>
    </validationRules>
</CustomObject>